--- a/index.html
+++ b/index.html
@@ -10,28 +10,28 @@
 </head>
 
 <body>
-    <button class="grid-main">
-        <button class="grid-fruits">
-            <div>1</button>
-            <button>2</button>
-            <button>3</button>
-            <button>4</button>
-            <button>5</button>
-            <button>6</button>
-            <button>7</button>
-            <button>8</button>
-            <button>9</button>
-            <button>.</button>
-            <button>0</button>
-            <button>=</button>
-        </button>
-        <button class="grid-transports">
-            <button>÷</button>
-            <button>*</button>
-            <button>-</button>
-            <button>+</button>
-        </button>
-    </button>
+    <div class="grid-main">
+        <div class="grid-fruits">
+            <div>0</div>
+            <div>1</div>
+            <div>2</div>
+            <div>3</div>
+            <div>4</div>
+            <div>5</div>
+            <div>6</div>
+            <div>7</div>
+            <div>8</div>
+            <div>9</div>
+            <div>.</div>
+            <div>=</div>
+        </div>
+        <div class="grid-transports">
+            <div>÷</div>
+            <div>-</div>
+            <div>*</div>
+            <div>+</div>
+        </div>
+    </div>
 </body>
 
 </html>
